[package]
name = "alloc_uefi"
version = "0.1.0"
authors = ["James Forcier <james.forcier@coreos.com>"]
license = "Apache-2.0"
categories = ["memory-management", "no-std"]
keywords = ["alloc", "uefi"]
readme = "README.md"
repository = "https://github.com/csssuf/alloc_uefi"
description = """
Allocator for a UEFI environment.
"""

[dependencies]
